# tpro2

./: README.md  pz01-gitlab-web.md  pz02-gitlab-cli.md  pz03-code.md  pz04-teamwork.md  pz05-unittests-catch.md  pz06-GUI-SFML.md  pz07-TCP-IP.md  pz08-requests.md  pz09-http-server.md  pz10-SQLite.md  проект.md
ddz/: checkers.md  ddz.md  photoeditor.md  tron.md
src/: CMakeLists.txt
src/pz07/: Home_Work.md
src/pz07/ClearTCPClient/: CMakeLists.txt  main.cpp
src/pz07/ClearTCPServer/: CMakeLists.txt  main.cpp
src/pz07/Home Work. Messenger/Messenger Client/: CMakeLists.txt  Message.cpp  Message.h  Messenger.cpp  Messenger.h  NetworkManager.h  main.cpp
src/pz07/Home Work. Messenger/Messenger Server/: CMakeLists.txt  Client.cpp  Client.h  Connection.h  Server.cpp  Server.h  main.cpp
timp-2020/: task4-1.md
timp-2020/3-6/: test2_2.cpp.txt  tests.cpp
